unpackaged/main/default/objects/Sales_Information_Tool__c/Sales_Information_Tool__c.object-meta.xml
<CustomObject>
    <description>A custom object used by finance to plan future shows based on information on a previous year&#39;s show.</description>
    <label>Sales Information Tool</label>
    <nameField>
        <label>Sales Information Tool Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Information Tools</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>