unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Acoustic_Sound_Wall__c.field-meta.xml
<CustomField>
    <fullName>Acoustic_Sound_Wall__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acoustic Sound Wall?</label>
    <type>Checkbox</type>
</CustomField>