unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Add_l_T_E_Costs_Union__c.field-meta.xml
<CustomField>
    <fullName>Add_l_T_E_Costs_Union__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Add&#39;l T&amp;E Costs</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>