unpackaged/main/default/objects/Sales_Information_Tool__c/fields/AM_NAM__c.field-meta.xml
<CustomField>
    <fullName>AM_NAM__c</fullName>
    <label>AM / NAM</label>
    <length>50</length>
    <type>Text</type>
</CustomField>