unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Avg_Daily_Cost_Sales_Design__c.field-meta.xml
<CustomField>
    <fullName>Avg_Daily_Cost_Sales_Design__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Avg Daily Cost</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>