unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Carpet_Depot_Sq_Yd_RY__c.field-meta.xml
<CustomField>
    <fullName>Carpet_Depot_Sq_Yd_RY__c</fullName>
    <formula>Show_Opportunity_Public_Ref__r.SIT_Carpet_Depot_Sq_Yd__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Carpet Depot Sq Yd</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>