unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Carpet_RY__c.field-meta.xml
<CustomField>
    <fullName>Carpet_RY__c</fullName>
    <formula>Show_Opportunity_Public_Ref__r.SIT_Carpet__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Carpet</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>