unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Carpet_Upgrades_RY__c.field-meta.xml
<CustomField>
    <fullName>Carpet_Upgrades_RY__c</fullName>
    <formula>Show_Opportunity_Public_Ref__r.SIT_Carpet_Upgrades__c</formula>
    <label>Carpet Upgrades</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>