unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Carpet_Upgrades_VAR_YOY__c.field-meta.xml
<CustomField>
    <fullName>Carpet_Upgrades_VAR_YOY__c</fullName>
    <formula>IF(Carpet_Upgrades_RY__c = 0,0, ((Carpet_Upgrades__c - Carpet_Upgrades_RY__c)/Carpet_Upgrades_RY__c) )</formula>
    <label>Carpet Upgrades</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>