unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Carpeted_Hall__c.field-meta.xml
<CustomField>
    <fullName>Carpeted_Hall__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Carpeted Hall</label>
    <type>Checkbox</type>
</CustomField>