unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Change_In_Freight_Structure_Notes__c.field-meta.xml
<CustomField>
    <fullName>Change_In_Freight_Structure_Notes__c</fullName>
    <label>Change In Freight Structure Notes</label>
    <type>TextArea</type>
</CustomField>