unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Change_in_Premium_Time__c.field-meta.xml
<CustomField>
    <fullName>Change_in_Premium_Time__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Change in Premium Time?</label>
    <type>Checkbox</type>
</CustomField>