unpackaged/main/default/objects/Sales_Information_Tool__c/fields/City_Rates_Specialty_Furniture__c.field-meta.xml
<CustomField>
    <fullName>City_Rates_Specialty_Furniture__c</fullName>
    <label>City Rates Specialty Furniture</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SIT_City_Rates</valueSetName>
    </valueSet>
</CustomField>