unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Commissions__c.field-meta.xml
<CustomField>
    <fullName>Commissions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Org Commissions?</label>
    <type>Checkbox</type>
</CustomField>