unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Contracted_Rates_Details__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Rates_Details__c</fullName>
    <label>Contracted Rates Details</label>
    <type>TextArea</type>
</CustomField>