unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Contracted_Rates_Intl_Logistics_Out__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Rates_Intl_Logistics_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contracted Rates? - Intl Logistics Out</label>
    <type>Checkbox</type>
</CustomField>