unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Contracted_Rates_Warehouse_Freight__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Rates_Warehouse_Freight__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contracted Rates? - Warehouse Freight</label>
    <type>Checkbox</type>
</CustomField>