unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Discretionary_Basis_Year__c.field-meta.xml
<CustomField>
    <fullName>Discretionary_Basis_Year__c</fullName>
    <label>Discretionary Basis Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Conv Ctr - Low</fullName>
            </value>
            <value>
                <fullName>Conv Ctr - Med</fullName>
            </value>
            <value>
                <fullName>Conv Ctr - High</fullName>
            </value>
            <value>
                <fullName>Hotel - Low</fullName>
            </value>
            <value>
                <fullName>Hotel - Med</fullName>
            </value>
            <value>
                <fullName>Hotel - High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>