unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Electric_Labor_Material_RY__c.field-meta.xml
<CustomField>
    <fullName>Electric_Labor_Material_RY__c</fullName>
    <formula>Show_Opportunity_Public_Ref__r.SIT_Electric_Labor_Materials__c</formula>
    <label>Electric  - Labor &amp; Materials</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>