unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Electric_Rigging_RY__c.field-meta.xml
<CustomField>
    <fullName>Electric_Rigging_RY__c</fullName>
    <formula>Show_Opportunity_Public_Ref__r.SIT_Electric_Rigging__c</formula>
    <label>Electric Rigging</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>