unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Electrical_RY__c.field-meta.xml
<CustomField>
    <fullName>Electrical_RY__c</fullName>
    <formula>Show_Opportunity_Public_Ref__r.SIT_Electrical__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Electrical</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>