unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Exh_Billable_CWT_PY__c.field-meta.xml
<CustomField>
    <fullName>Exh_Billable_CWT_PY__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Exh. Billable CWT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>