unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Exh_Billable_CWT_Var_to_BSY__c.field-meta.xml
<CustomField>
    <fullName>Exh_Billable_CWT_Var_to_BSY__c</fullName>
    <formula>IF(  Exh_Billable_CWT_RY__c  =0,0,((   Exh_Billable_CWT_PY__c   -Exh_Billable_CWT_RY__c)/Exh_Billable_CWT_RY__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exh. Billable CWT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>