unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Exhibitor_Carpet_from_Depot__c.field-meta.xml
<CustomField>
    <fullName>Exhibitor_Carpet_from_Depot__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exhibitor Carpet from Depot</label>
    <type>Checkbox</type>
</CustomField>