unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Exhibitor_NSF_PY__c.field-meta.xml
<CustomField>
    <fullName>Exhibitor_NSF_PY__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Exhibitor NSF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>