unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Exhibitor_NSF_Var_to_BSY__c.field-meta.xml
<CustomField>
    <fullName>Exhibitor_NSF_Var_to_BSY__c</fullName>
    <formula>IF(   Exhibitor_NSF_RY__c   =0,0,((   Exhibitor_NSF_PY__c   -Exhibitor_NSF_RY__c )/Exhibitor_NSF_RY__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exhibitor NSF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>