unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Exhibitor_Revenue_RY__c.field-meta.xml
<CustomField>
    <fullName>Exhibitor_Revenue_RY__c</fullName>
    <formula>Show_Opportunity_Public_Ref__r.SIT_Exhibitor_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exhibitor Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>