unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Exhibitor_Revenue_Var_YOY__c.field-meta.xml
<CustomField>
    <fullName>Exhibitor_Revenue_Var_YOY__c</fullName>
    <formula>IF( Exhibitor_Revenue_RY__c = 0,0,  ((Exhibitor_Revenue_PY__c  - Exhibitor_Revenue_RY__c)/Exhibitor_Revenue_RY__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exhibitor Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>