unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Facility_RY__c.field-meta.xml
<CustomField>
    <fullName>Facility_RY__c</fullName>
    <description>Facility ID for Show Opportunity Occurrence for Prior / Base Show Used for Comparison</description>
    <formula>Show_Opportunity_Public_Ref__r.Facility__r.LMS_Facility_ID__c</formula>
    <label>Facility</label>
    <type>Text</type>
</CustomField>