unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Freight_Tier_for_Base_Event__c.field-meta.xml
<CustomField>
    <fullName>Freight_Tier_for_Base_Event__c</fullName>
    <label>Freight Tier for Base Event</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>ST/ST</fullName>
            </value>
            <value>
                <fullName>ST/OT</fullName>
            </value>
            <value>
                <fullName>OT/OT</fullName>
            </value>
            <value>
                <fullName>Composite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>