unpackaged/main/default/objects/Sales_Information_Tool__c/fields/GEM_Var_YOY__c.field-meta.xml
<CustomField>
    <fullName>GEM_Var_YOY__c</fullName>
    <formula>IF( GEM_RY__c = 0,0,  ((GEM_PY__c  - GEM_RY__c)/GEM_RY__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GEM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>