unpackaged/main/default/objects/Sales_Information_Tool__c/fields/General_Showsite_PY__c.field-meta.xml
<CustomField>
    <fullName>General_Showsite_PY__c</fullName>
    <defaultValue>0</defaultValue>
    <label>General Showsite</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>