unpackaged/main/default/objects/Sales_Information_Tool__c/fields/General_Showsite_Var_YOY__c.field-meta.xml
<CustomField>
    <fullName>General_Showsite_Var_YOY__c</fullName>
    <formula>IF( General_Showsite_RY__c = 0,0,  ((General_Showsite_PY__c  - General_Showsite_RY__c)/General_Showsite_RY__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>General Showsite</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>