unpackaged/main/default/objects/Sales_Information_Tool__c/fields/GES_Service_Electrical__c.field-meta.xml
<CustomField>
    <fullName>GES_Service_Electrical__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GES Service? - Electrical</label>
    <type>Checkbox</type>
</CustomField>