unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Graphics_Depot__c.field-meta.xml
<CustomField>
    <fullName>Graphics_Depot__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Graphics Depot</label>
    <type>Checkbox</type>
</CustomField>