unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Graphics_Depot_NSF_RY__c.field-meta.xml
<CustomField>
    <fullName>Graphics_Depot_NSF_RY__c</fullName>
    <formula>Show_Opportunity_Public_Ref__r.SIT_Graphics_Depot_NSF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Graphics Depot NSF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>