unpackaged/main/default/objects/Sales_Information_Tool__c/fields/I_D_Var_YOY__c.field-meta.xml
<CustomField>
    <fullName>I_D_Var_YOY__c</fullName>
    <formula>IF(  I_D_RY__c  = 0,0,  ((I_D_PY__c  - I_D_RY__c)/I_D_RY__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>I&amp;D</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>