unpackaged/main/default/objects/Sales_Information_Tool__c/fields/If_Different_enter_date_Show_Close__c.field-meta.xml
<CustomField>
    <fullName>If_Different_enter_date_Show_Close__c</fullName>
    <label>If Different (enter date)</label>
    <type>Date</type>
</CustomField>