unpackaged/main/default/objects/Sales_Information_Tool__c/fields/If_Yes_Please_Explain_x__c.field-meta.xml
<CustomField>
    <fullName>If_Yes_Please_Explain_x__c</fullName>
    <inlineHelpText>If you answered yes to any of the questions above in Show Organizer Info, please explain why?</inlineHelpText>
    <label>If Yes for Any, Please Explain</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>