unpackaged/main/default/objects/Sales_Information_Tool__c/fields/If_Yes_Please_Explain_xxx__c.field-meta.xml
<CustomField>
    <fullName>If_Yes_Please_Explain_xxx__c</fullName>
    <label>If Yes, Please Explain</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>