unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Inbound_Logistics_RY__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Logistics_RY__c</fullName>
    <formula>Show_Opportunity_Public_Ref__r.SIT_Logistics_In__c</formula>
    <label>Logistics Inbound</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>