unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Intl_Logistics_In_RY__c.field-meta.xml
<CustomField>
    <fullName>Intl_Logistics_In_RY__c</fullName>
    <formula>Show_Opportunity_Public_Ref__r.SIT_Intl_Logistics_In__c</formula>
    <label>Int&#39;l Logistics In</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>