unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Intl_Logistics_Out_VAR_YOY__c.field-meta.xml
<CustomField>
    <fullName>Intl_Logistics_Out_VAR_YOY__c</fullName>
    <formula>IF(Intl_Logistics_Out_RY__c = 0,0, ((Intl_Logistics_Outbound__c - Intl_Logistics_Out_RY__c)/Intl_Logistics_Out_RY__c) )</formula>
    <label>Int&#39;l Logistics Out</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>