unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Is_Price_Set_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Is_Price_Set_Percentage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Yes/No</label>
    <type>Checkbox</type>
</CustomField>