unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Job_Number_RY__c.field-meta.xml
<CustomField>
    <fullName>Job_Number_RY__c</fullName>
    <description>Job Number for Show Opportunity Occurrence for Prior/Base Show Used for Comparison</description>
    <formula>Show_Opportunity_Public_Ref__r.Job_Number__c</formula>
    <label>Job Number</label>
    <type>Text</type>
</CustomField>