unpackaged/main/default/objects/Sales_Information_Tool__c/fields/LOBs_Differ__c.field-meta.xml
<CustomField>
    <fullName>LOBs_Differ__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LOBs Differ</label>
    <type>Checkbox</type>
</CustomField>