unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Logistics_Out_VAR_YOY__c.field-meta.xml
<CustomField>
    <fullName>Logistics_Out_VAR_YOY__c</fullName>
    <formula>IF(Logistics_Out_RY__c = 0,0, ((Logistics_Outbound__c - Logistics_Out_RY__c)/Logistics_Out_RY__c) )</formula>
    <label>Logistics Out</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>