unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Machinery_Special_Rates__c.field-meta.xml
<CustomField>
    <fullName>Machinery_Special_Rates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Machinery/Special Rates</label>
    <type>Checkbox</type>
</CustomField>