unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Material_Handling_Overtime__c.field-meta.xml
<CustomField>
    <fullName>Material_Handling_Overtime__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Material Handling Overtime</label>
    <type>Checkbox</type>
</CustomField>