unpackaged/main/default/objects/Sales_Information_Tool__c/fields/MH_LTW__c.field-meta.xml
<CustomField>
    <fullName>MH_LTW__c</fullName>
    <label>MH LTW</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>