unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Move_Out_PY__c.field-meta.xml
<CustomField>
    <fullName>Move_Out_PY__c</fullName>
    <description>Move-Out date on Show Opportunity Occurrence</description>
    <formula>Occurrence_for_Plan__r.Move_Out__c</formula>
    <label>Move-Out</label>
    <type>Date</type>
</CustomField>