unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Move_Out_RY__c.field-meta.xml
<CustomField>
    <fullName>Move_Out_RY__c</fullName>
    <formula>Show_Opportunity_Public_Ref__r.Move_Out__c</formula>
    <label>Move_Out</label>
    <type>Date</type>
</CustomField>