unpackaged/main/default/objects/Sales_Information_Tool__c/fields/New_Show_Look_Notes__c.field-meta.xml
<CustomField>
    <fullName>New_Show_Look_Notes__c</fullName>
    <label>New Show Look Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>