unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Occurrence_for_Plan__c.field-meta.xml
<CustomField>
    <fullName>Occurrence_for_Plan__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Show Occurrence for Plan</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Show_Occurrence_Public__c.Show_Name__c</field>
            <operation>startsWith</operation>
            <valueField>$Source.Show__c</valueField>
        </filterItems>
        <filterItems>
            <field>Show_Occurrence_Public__c.Name</field>
            <operation>notContain</operation>
            <value>&quot;-AV&quot;,&quot;-Housing&quot;,&quot;-Reg&quot;</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Show_Occurrence_Public__c</referenceTo>
    <relationshipLabel>Sales Information Tools (Occurrence for Plan)</relationshipLabel>
    <relationshipName>Sales_Information_Tools1</relationshipName>
    <type>Lookup</type>
</CustomField>