unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Operations_Manager_Notes__c.field-meta.xml
<CustomField>
    <fullName>Operations_Manager_Notes__c</fullName>
    <label>Operations Manager Notes:</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>