unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Other_SO_Notes_e_g_no_charge_items__c.field-meta.xml
<CustomField>
    <fullName>Other_SO_Notes_e_g_no_charge_items__c</fullName>
    <label>Other SO Notes (e.g. no-charge items)</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>