unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Other_Subs_Var_YOY__c.field-meta.xml
<CustomField>
    <fullName>Other_Subs_Var_YOY__c</fullName>
    <formula>IF( Other_Subs_RY__c = 0,0,  ((Other_Subs_PY__c  - Other_Subs_RY__c)/Other_Subs_RY__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Other Subs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>