unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Other_T_E_Notes__c.field-meta.xml
<CustomField>
    <fullName>Other_T_E_Notes__c</fullName>
    <label>Other T&amp;E Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>