unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Outlets_Electric__c.field-meta.xml
<CustomField>
    <fullName>Outlets_Electric__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Outlets - Electric</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>