unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Outlets_Electric_VAR_YOY__c.field-meta.xml
<CustomField>
    <fullName>Outlets_Electric_VAR_YOY__c</fullName>
    <formula>IF(Outlets_Electric_RY__c = 0,0, ((Outlets_Electric__c - Outlets_Electric_RY__c)/Warehouse_Freight_RY__c) )</formula>
    <label>Outlets - Electric</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>